@@ -35,13 +35,31 @@ The compareAndSet API should always be proceeded by a GET operation. The record 
 </details>
 
 ## Dependencies
-Java 8 and Maven is required.
+Java 8 or Java 11 and Maven is required.
 
 ```shell
 sudo apt install openjdk-8-jdk
 sudo apt-get install maven
 ```
 
+If compiling with Java 8, please remove the following from [juno-client-impl/pom.xml](juno-client-impl/pom.xml) and [FunctionalTests/pom.xml](FunctionalTests/pom.xml)
+
+```agsl
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.12.4</version>
+            <configuration>
+                <argLine>
+                    --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                </argLine>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+```
 
 ## Quick Start
 The easiest way is to download the jar as well as its transitive dependencies through maven:
